[package]
name = "cargo-commentratio"
description = "Calculate comment ratio in rust code"
version = "0.0.1"
authors = [
    "Anton Weiss"
]

[dependencies]
console = "0.6.1"
dialoguer = "0.1.0"
indicatif = "0.9.0"
quicli = "0.3.1"
walkdir = "2.1.4"
remove_dir_all = "0.5.1"
ignore = "0.4.3"
regex = "1.0.6"